--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    box-sizing: border-box;
+    font-family: Georgia, serif;
+}
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+.button {
+    background-color: antiquewhite;
+    color: cadetblue;
+    font-size: 13px;
+    padding: 10px;
+}
+
+.button:hover {
+    cursor: pointer;
+}
