Tested components using Jasmine

--- a/src/app/people/people.component.html
+++ b/src/app/people/people.component.html
@@ -1,6 +1,6 @@
 <div class="add-person">
     <div class="add-person-input">
-        <label>Full Name: <input pattern="[a-zA-Z ]*" type="text" #fullName></label>
+        <label>Full Name: <input type="text" #fullName></label>
         <label>Email: <input type="email" #email></label>
         <label>Birthday: <input type="text" #birthday></label>
         <label>Zipcode: <input type="text" #zipcode></label>
