Fixing some css styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="my-people-title">
     <h1>{{title}}</h1>
+    <p>Enter information for the following fields to add people to your list: </p>
 </div>
 <app-people></app-people>
 
